--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delicatessen Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./PRODIGY_WD_01/styles.css">
 </head>
 <body>
     <header>
@@ -93,7 +93,7 @@
     <p>&copy; 2023 delicatessenstore. All rights reserved.</p>
 </footer>
 
-    <script src="scripts.js"></script>
+    <script src="./PRODIGY_WD_01/scripts.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             // Placeholder for any future JavaScript functionality
