--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Can be made into various forms like layer cakes, shortcakes, or cheesecakes.</p>
             </div>
             <div class="hero-image">
-                <img src="Strawberry Cake.jpeg" alt="Cake with Strawbary">
+                <img src="./PRODIGY_WD_01/Strawberry Cake.jpeg" alt="Cake with Strawbary">
             </div>
         </div>
     </section>
@@ -43,22 +43,22 @@
             <p></p>
             <div class="product-carousel">
                 <div class="product">
-                    <img src="Strawberry Cake Piece.jpeg" alt="Strawberry Cake Piece">
+                    <img src="./PRODIGY_WD_01/Strawberry Cake Piece.jpeg" alt="Strawberry Cake Piece">
                     <p>$115</p>
                     <p>Strawberry Cake Piece</p>
                 </div>
                 <div class="product">
-                    <img src="Chocolate Cake Piece.jpeg" alt="Chocolate Cake Piece">
+                    <img src="./PRODIGY_WD_01/Chocolate Cake Piece.jpeg" alt="Chocolate Cake Piece">
                     <p>$115</p>
                     <p>Strawberry Cake Piece</p>
                 </div>
                 <div class="product">
-                    <img src="Fruit Cake Piece.jpeg" alt="Fruit Cake Piece">
+                    <img src="./PRODIGY_WD_01/Fruit Cake Piece.jpeg" alt="Fruit Cake Piece">
                     <p>$115</p>
                     <p>Strawberry Cake Piece</p>
                 </div>
                 <div class="product">
-                    <img src="Layer Cake Piece.jpeg" alt="Layer Cake Piece">
+                    <img src="./PRODIGY_WD_01/Layer Cake Piece.jpeg" alt="Layer Cake Piece">
                     <p>$115</p>
                     <p>Strawberry Cake Piece</p>
                 </div>
